uf_ulog_macro/tests/ui/fail_bad_name_attr.stderr
error: expected string literal
 --> tests/ui/fail_bad_name_attr.rs:2:18
  |
2 | #[uf_ulog(name = 10)]
  |                  ^^
