uf_ulog_macro/tests/ui/fail_bad_name_attr.rs
#[derive(uf_ulog_macro::ULogData)]
#[uf_ulog(name = 10)]
struct BadNameAttr {
    timestamp: u64,
}

fn main() {}
